fix(core): align label character count always to the right (#158)

--- a/core/src/styles/_snippets/_form-label.scss
+++ b/core/src/styles/_snippets/_form-label.scss
@@ -40,6 +40,7 @@ $cat-input-height: 2.5rem;
 .label-character-count {
   display: flex;
   align-items: center;
+  margin-left: auto;
   max-height: 1.25rem;
   @include cat-body('xs');
   color: cat-token('color.ui.font.muted');
@@ -59,5 +60,9 @@ $cat-input-height: 2.5rem;
 
   .label-metadata {
     justify-content: flex-start;
+
+    .label-character-count {
+      margin-left: 0;
+    }
   }
 }
